--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,58 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:prettier/recommended",
+        "prettier",
+        "plugin:tailwindcss/recommended"
+    ],
+    "overrides": [
+      {
+    "files": "['*.ts', '*.tsx', '*.js']",
+    "parser": "@typescript-eslint/parser"
+  }
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react",
+        "@typescript-eslint","react-hooks",
+        "eslint-plugin-import-helpers"
+
+    ],
+    "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn",
+      "react/react-in-jsx-scope":"off",
+      "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+      "prettier/prettier":"error",
+      "import-helpers/order-imports": [
+            "warn",
+            { 
+                "newlinesBetween": "always",
+                "groups": [
+                    ["/^react/","/^next/"],
+                    "/components/",
+                    "module",
+                    "/^@shared/",
+                    "/absotute/",
+                    ["parent", "sibling", "index"]
+                ],
+                "alphabetize": { "order": "asc", "ignoreCase": true }
+            }
+        ]
+    }
 }
