--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prettier:check": "prettier --check ."
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.0",
+    "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
